fix button with cecile

--- a/app/assets/stylesheets/components/_score.scss
+++ b/app/assets/stylesheets/components/_score.scss
@@ -54,6 +54,13 @@
   border-color: transparent;
 }
 
+.score-title {
+  margin-bottom: 40px;
+
+  h2 {
+    margin-top: 15px;
+  }
+}
 /* Hover effects */
 // .scores:hover {
 //   background: #f7f7fa;
