change path for svg

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -55,7 +55,7 @@
 }
 
 .btn-pimp {
-  background-image: url("btn.svg");
+  background-image: image-url("btn.svg");
   background-size: 100% 100%;
   border: none;
   border-radius: 0px;
@@ -69,7 +69,7 @@
 }
 
 .btn-pimp-w {
-  background-image: url("btn-w.svg");
+  background-image: image-url("btn-w.svg");
   background-size: 100% 100%;
   border: none;
   border-radius: 0px;
