christophe fait chier

--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -1,3 +1,6 @@
+<div>
+  <h2> <%= @counter_remaining %>/<%= @counter_total  %> - <%= "#{@poi.name}" %></h2>
+</div>
 <div class="wrapper_map">
   <div
     id="map"
