--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -92,7 +92,7 @@
 
 .btn-pimp:hover {
   filter: grayscale(40%);
-  background-image: url("btn.svg");
+  background-image: image-url("btn.svg");
   background-size: 100% 100%;
   border: none;
   border-radius: 0px;
