--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,6 +6,7 @@
   color: white;
   position: relative;
   margin-bottom: 15px;
+  border-radius: 4px;
 }
 .card-user {
   position: absolute;
@@ -45,6 +46,7 @@
   width:100%;
   height: 25px;
   background-color: #860CE6;
+  border-radius: 4px;
 }
 
 .card-link {
