--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Mind the Map - Learn to know your city</title>
+    <meta name="description" content="If you just moved to a new city or plan on moving, you know how difficult it can be to memorize its Point of Interest. Whith Mind the map you can know learn and play. ">
+    <meta name="keywords" content="geography, game">
+
+    <!-- Social networks OG -->
+    <meta property="og:type" content="game">
+    <meta property="og:title" content="Mind the Map:  a geographic game to learn the geography of  your city">
+    <meta property="og:description" content="Challenge your friend to see who knows the city best.">
+      <meta property="og:image" content="<%= asset_path 'mindthemap.jpg' %>">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Mind the Map">
+
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
