--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,14 +1,20 @@
 /* Main navbar */
 .navbar-wagon {
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+  background-color: rgba(0, 0, 0, 0);
   transition: all 0.3s ease;
+  width: 100vw;
   height: 70px;
   padding: 0px 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: fixed;
 }
+
+/* Transparent navbar */
+// .navbar-wagon-tranparent {
+//   background: transparent;
+// }
 
 /* Logo */
 .navbar-wagon-brand img {
