--- a/app/views/pois/show.html.erb
+++ b/app/views/pois/show.html.erb
@@ -6,31 +6,31 @@
   <div
     id="map"
     style="width: 100vw;
-    height: 100vh;"
+    height: 50vh;"
     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
     data-game="on">
     <div class="position-right">
       <%= render 'shared/bar_timer' %>
-
     </div>
   </div>
-
-
 </div>
 
- <div style="display: none;">
-     <%= simple_form_for [@game, @poi, @answer] do |f| %>
+ <div>
+     <%= simple_form_for([@game, @poi, @answer], remote: true) do |f| %>
         <%= f.input :latitude %>
         <%= f.input :longitude %>
         <%= f.input :time_to_respond %>
-        <%= f.submit class: "btn btn-form"%>
+        <%= f.submit id: "answer-button", class: "btn btn-form"%>
       <% end %>
  </div>
 
-<script type="text/javascript">
+<%# empty container to display the answer %>
+<div class="menu-map-container"></div>
+
+<!-- <script type="text/javascript">
  setTimeout(function() {
    const form = document.getElementById('new_answer');
    form.submit();
  }, 13000);
 </script>
-
+ -->
