--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -46,7 +46,7 @@
       </div>
       <div class="button-answer btn-pimp-w btn-fw-2 text-center">
         <% if @next_poi.nil? %>
-          <%= link_to "> See your score" , game_url(@game) %>
+          <%= link_to "> See your score" , game_url(@game), method: :patch %>
         <% else %>
           <%= link_to "> Next question" , game_poi_url(@game,@next_poi) %>
         <% end %>
