clean useless css for buttons

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -25,8 +25,9 @@
   padding: 0px 10px;
 }
 .footer-links a:hover {
+  color: $purple;
   opacity: 1;
 }
 .footer .fa-heart {
-  color: #D23333;
+  color: $purple;
 }
