--- a/app/views/pois/show.html.erb
+++ b/app/views/pois/show.html.erb
@@ -23,7 +23,7 @@
         <%= f.input :latitude %>
         <%= f.input :longitude %>
         <%= f.input :time_to_respond %>
-        <%= f.submit class: "btn btn-form"%>
+        <%= f.submit class: "btn btn-primary btn-pimp"%>
       <% end %>
  </div>
 
