--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -50,7 +50,7 @@
         </div>
 
         <div class="form-actions text-center" >
-          <%= f.button :submit, "Sign up", class: "btn-form btn-primary btn-pimp" %>
+          <%= f.button :submit, "Sign up", class: "btn-primary btn-pimp" %>
         </div>
         <div class="text-center pad-top">
           <%= render "devise/shared/links" %>
