--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <meta property="og:type" content="game">
     <meta property="og:title" content="Mind the Map: the first geography game on a city-level!">
     <meta property="og:description" content="Challenge your friends to see who knows the city best.">
-      <meta property="og:image" content="<%= asset_path 'mindthemap.jpg' %>">
+      <meta property="og:image" content="<%= image_path 'banner-mind-the-map.png' %>">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Mind the Map">
@@ -31,6 +31,7 @@
     <link rel="shortcut icon" type="image/png" href="<%= asset_path 'favicon.png' %>" />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
   </head>
+
   <body>
     <% unless (params[:controller] == 'pois' && params[:action] == 'show')|| (params[:controller] == 'answers' && params[:action] == 'show') %>
       <%= render 'shared/navbar' %>
