--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,22 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Mind the Map - Learn to know your city</title>
-    <meta name="description" content="If you just moved to a new city or plan on moving, you know how difficult it can be to memorize its key locations. With Mind the map you can know learn and play. ">
+    <meta name="description" content="If you just moved to a new city or plan on moving, you know how difficult it can be to memorize its Point of Interest. Whith Mind the map you can know learn and play. ">
     <meta name="keywords" content="geography, game">
-
-    <!-- Twitter Card data -->
-    <!-- <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="<%= DEFAULT_META["twitter_account"] %>">
-    <meta name="twitter:title" content="<%= meta_title %>">
-    <meta name="twitter:description" content="<%= meta_description %>">
-    <meta name="twitter:creator" content="<%= DEFAULT_META["twitter_account"] %>">
-    <meta name="twitter:image:src" content="<%= meta_image %>"> -->
 
     <!-- Social networks OG -->
     <meta property="og:type" content="game">
-    <meta property="og:title" content="Mind the Map: the first geography game on a city-level!">
-    <meta property="og:description" content="Challenge your friends to see who knows the city best.">
-      <meta property="og:image" content="<%= image_path 'banner-mind-the-map.png' %>">
+    <meta property="og:title" content="Mind the Map:  a geographic game to learn the geography of  your city">
+    <meta property="og:description" content="Challenge your friend to see who knows the city best.">
+      <meta property="og:image" content="<%= asset_path 'mindthemap.jpg' %>">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Mind the Map">
@@ -31,7 +23,6 @@
     <link rel="shortcut icon" type="image/png" href="<%= asset_path 'favicon.png' %>" />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
   </head>
-
   <body>
     <% unless (params[:controller] == 'pois' && params[:action] == 'show')|| (params[:controller] == 'answers' && params[:action] == 'show') %>
       <%= render 'shared/navbar' %>
