--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Mind the Map - Learn to know your city</title>
-    <meta name="description" content="If you just moved to a new city or plan on moving, you know how difficult it can be to memorize its Point of Interest. Whith Mind the map you can know learn and play. ">
+    <meta name="description" content="If you just moved to a new city or plan on moving, you know how difficult it can be to memorize its important parts. With Mind the map you can know learn and play. ">
     <meta name="keywords" content="geography, game">
 
     <!-- Social networks OG -->
