--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 
     <!-- Social networks OG -->
     <meta property="og:type" content="game">
-    <meta property="og:title" content="Mind the Map:  a geographic game to learn the geography of  your city">
+    <meta property="og:title" content="Mind the Map: The first geography game on city level!">
     <meta property="og:description" content="Challenge your friend to see who knows the city best.">
       <meta property="og:image" content="<%= asset_path 'mindthemap.jpg' %>">
     <meta property="og:image:width" content="1200">
