meta-description correction

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :meta_title, "#{@game.user_one.first_name} has challenged you on #{DEFAULT_META["meta_product_name"]}" %>
-<% content_for :meta_description, @game.theme.name | @game.theme.city.name %>
+<% content_for :meta_description, "#{@game.theme.name}, #{@game.theme.city.name}" %>
 
 <% content_for :meta_image, @theme.photo %>
 
