--- a/app/views/pois/show.html.erb
+++ b/app/views/pois/show.html.erb
@@ -15,7 +15,7 @@
   </div>
 </div>
 
- <div style="display:none," >
+ <div style="display:none;" >
      <%= simple_form_for([@game, @poi, @answer], remote: true) do |f| %>
         <%= f.input :latitude %>
         <%= f.input :longitude %>
