--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -22,6 +22,9 @@
   margin-top: 30px;
 }
 
+#logo-app {
+  height: 70px;
+}
 /* User Avatar */
 .navbar-wagon .avatar {
   height: 35px;
@@ -81,4 +84,36 @@
   transform: rotate(45deg);
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
+}
+
+@media (max-width: 960px) {
+  /* For a screen < 540px, this CSS will be read */
+  .container {
+    width: 800px;
+  }
+  .navbar-wagon {
+    position: relative;
+  }
+
+  #logo-app {
+    height: 50px;
+  }
+
+  .navbar-wagon-brand img {
+    margin-top: 0px;
+  }
+}
+
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+  .container {
+    width: 600px;
+  }
+
+}
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
+  .container {
+    width: 400px;
+  }
 }
