--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -14,7 +14,7 @@
 <div>
   <div class="results-listing">
 
-    <div id="map" style="height: 100vh;" data-markers="<%= @markers.to_json %>" data-game="off" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>" data-zoom=11>
+    <div id="map" class="map-show";" data-markers="<%= @markers.to_json %>" data-game="off" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>" data-zoom=11>
     </div>
 
 
