--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-wagon navbar-wagon-tranparent">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <%= image_tag "logo-2.svg", height: 70 %>
+    <%= image_tag "logo-2.svg", id: "logo-app" %>
   <% end %>
 
   <!-- Right Navigation -->
