added name and count on the right with answersé

--- a/app/assets/stylesheets/components/_score_card.scss
+++ b/app/assets/stylesheets/components/_score_card.scss
@@ -1,24 +1,34 @@
-.menu-map {
-  height: 650px;
-  width: 350px;
+.menu-score {
   position: absolute;
-  top: 130px;
-  right: 20px;
+  top: 60px;
+  right: 40px;
   z-index: 3000;
-  display: flex;
-  flex-direction: column;
-  // justify-content: space-around;
-  align-items: center;
+  // display: flex;
+  // flex-direction: column;
+  // // justify-content: space-around;
+  // align-items: center;
 
 .score-card {
-  height: 600px;
   width: 350px;
+  height: 270px;
   z-index: 3000;
+  padding: 20px;
+  overflow: hidden;
+}
+
+.score-card.open {
+  height: 650px;
+  transition: all 1.5s ease-in-out;
+  overflow: hidden;
+}
+
+.score-card-lvl-2 {
+  height: 650px;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  padding: 20px;
 }
 
   .POI_name {
@@ -37,6 +47,10 @@
 
   h1, h2, h3, h4, h5 {
     color: #fff;
+  }
+
+  h2 {
+    font-size: 32px
   }
 
   p {
