--- a/app/views/answers/_show.html.erb
+++ b/app/views/answers/_show.html.erb
@@ -8,4 +8,4 @@
   >
 </div>
 
-<%= render "menu_map", game: @game, poi: @poi, next_poi: @next_poi, answer: @answer %>
+<%= render "menu_score", game: @game, poi: @poi, next_poi: @next_poi, answer: @answer %>
