bon le controller de challenge new et create fonctionne mais il faut encore revoir le answser pour prendre le cas d'un user_two jouant et ajaxifié la create game en mode duo

--- a/app/views/challenges/new.html.erb
+++ b/app/views/challenges/new.html.erb
@@ -1,2 +1,3 @@
 <h1>Challenge#new</h1>
 <p>Find me in app/views/challenge/new.html.erb</p>
+<%= link_to "debute le challenge", game_challenge_url(@game) , method: :post,  class: "btn btn-pimp btn-fw text-center" %>
