--- a/app/assets/stylesheets/components/_score_card.scss
+++ b/app/assets/stylesheets/components/_score_card.scss
@@ -1,3 +1,7 @@
+.menu-score-container {
+  margin-top: 20px;
+}
+
 .menu-score {
   position: absolute;
   top: 60px;
@@ -13,7 +17,6 @@
   height: 270px;
   z-index: 3000;
   padding: 20px;
-  overflow: hidden;
 }
 
 .score-card.open {
@@ -27,8 +30,28 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+}
+
+.icon-great {
+  text-align: center;
+  width: 100%;
+}
+
+.great, .bad {
+  height: 60px;
+}
+
+.time {
+  height: 33px;
+}
+
+.POI_counter h2 {
+  background-color: white;
+  color: $purple;
+  border-radius: 50%;
+  padding: 10px;
 }
 
   .POI_name {
@@ -41,12 +64,16 @@
 
   }
   .icon-pin {
-    height: 25px;
-    width: 25px;
+    width: 15px;
+    height: 31px;
+    margin-right: 10px;
   }
 
   h1, h2, h3, h4, h5 {
     color: #fff;
+  }
+  h1 {
+    font-size: 40px;
   }
 
   h2 {
