--- a/app/views/answers/_menu_score.html.erb
+++ b/app/views/answers/_menu_score.html.erb
@@ -1,23 +1,19 @@
 <div class="row-pin">
-  <div class="icon-pin">
-    <%= image_tag("pin_score.svg")%>
-  </div>
-  <div class="score-distance text-center">
-    <p><%= answer.distance %> meters</p>
-  </div>
+  <%= image_tag "pin_score.svg", class:"icon-pin"%>
+  <p class="score-distance text-center"><%= answer.distance %> meters</p>
 </div>
 <div class="row-time">
-  <%= image_tag(("time_score.svg"), class: "icon icon-time" )%>
+  <%= image_tag "time_score.svg", class:"time"%>
   <p><%= answer.time_to_respond %> s</p>
 </div>
 <div class="great-bad">
   <% if answer.score >= 200 %>
     <div class="icon icon-great">
-      <%= image_tag("great.svg")%>
+      <%= image_tag "great.svg", class:"great"%>
     </div>
   <% else %>
     <div class="icon icon-bad">
-      <%= image_tag("bad.svg")%>
+      <%= image_tag "bad.svg", class:"bad"%>
     </div>
   <% end %>
 </div>
