avec un petit display flex des familles

--- a/app/assets/stylesheets/components/_score_card.scss
+++ b/app/assets/stylesheets/components/_score_card.scss
@@ -1,5 +1,8 @@
 .menu-score-container {
   margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .menu-score {
