remove fields from devise

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -41,11 +41,11 @@
                           input_html: { autocomplete: "new-password" } %>
             </div>
           </div>
-          <div class="col-sm-6">
+<!--           <div class="col-sm-6">
             <div class="form-group">
               <%= f.input :photo %>
               <%= f.input :photo_cache, as: :hidden %>
-            </div>
+            </div> -->
           </div>
         </div>
 
