all good for light sign up

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -71,7 +71,7 @@
 }
 .navbar-wagon-dropdown-menu li > a:hover {
   background: transparent !important;
-  color: black !important;
+  color: $purple !important;
 }
 .navbar-wagon-dropdown-menu:before {
   content: ' ';
