ajout de la fonction copytoclipboard sur la modale challenge ton ami

--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -80,7 +80,7 @@
               <form class="form-inline text-center">
                 <label class="sr-only" for="LinkChallenge">link</label>
                 <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="LinkChallenge" value="">
-                <button type="submit" class="btn btn-primary" id="button-copy-theme">Copy Link</button>
+                <button class="btn btn-primary" id="button-copy-theme" onclick="copyToClip();">Copy Link</button>
               </form>
             </div>
           </div>
