--- a/app/views/games/create.js.erb
+++ b/app/views/games/create.js.erb
@@ -1,6 +1,6 @@
 
   // fermer la modal
-  console.log("createchallenge script sur themeModal<%= @game.theme.id %>")
+    // console.log("createchallenge script sur themeModal<%= @game.theme.id %>")
      let modalThemeClose = document.querySelector("#themeModal<%= @game.theme.id %> .close");
      modalThemeClose.click();
      const hiddenButton = document.getElementById('hidden-button');
@@ -11,4 +11,4 @@
     // $('#ModalMulti').modal('show');
     // ajouter  le lien du game dans le formulaire
      const linkToChallenge = document.getElementById('LinkChallenge')
-      linkToChallenge.value = "<%= new_game_challenge_url(@game) %>"
+     linkToChallenge.value = "<%= new_game_challenge_url(@game) %>"
