also decommented script setTimeout

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -7,6 +7,7 @@
 @import "card";
 @import "footer";
 @import "form";
+@import "leaderboard";
 @import "modal";
 @import "navbar";
 @import "wrapper_map";
