--- a/app/views/pois/show.html.erb
+++ b/app/views/pois/show.html.erb
@@ -37,10 +37,10 @@
   </div>
 </div>
 
-<!-- <script type="text/javascript">
+<script type="text/javascript">
  setTimeout(function() {
    const form = document.getElementById('new_answer');
    form.submit();
  }, 13000);
 </script>
- -->
+
