--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -49,12 +49,12 @@
           <div class="row">
             <div class="col-xs-12 col-sm-6 text-center">
               <%= link_to "Duo",
-                    theme_games_url(theme.id),
+                    theme_games_url(theme.id, game: { multi: true }),
                     data: { method: :post, remote: true},
                     class: "btn btn-pimp btn-fw text-center"%>
             </div>
             <div class="col-xs-12 col-sm-6 text-center">
-              <%= link_to "Solo", theme_games_url(theme.id) , method: :post,  class: "btn btn-pimp btn-fw text-center" %>
+              <%= link_to "Solo", theme_games_url(theme.id, game: { multi: false }) , method: :post,  class: "btn btn-pimp btn-fw text-center" %>
             </div>
           </div>
         </div>
