--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -44,9 +44,9 @@ label {
 
 .form-control {
   border-radius: 5px;
-}
+    }
 
-a {
+.form-control a {
   text-align: text-center;
   color: #860CE6;
 }
