--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,24 +10,36 @@
       <h2>MY BEST SCORES</h2>
     </div>
 
-    <div class="row scores-array">
-      <% @games.each do |game| %>
-        <div class="scores">
-
-          <img class="scores-image" src="<%= cl_image_path game.theme.photo %>">
-
-          <div class="scores-body text-center">
-            <p><%= game.theme.city.name %></p>
-            <p><%= game.theme.name %></p>
-            <p><strong><%= game.score_one %></strong></p>
-          </div>
-
-          <ul class="list-inline scores-controls">
-            <li><button class="btn btn-primary btn-pimp"><%= link_to 'Play again', theme_games_path(game.theme_id), method: :post %></button></li>
-            <li><button class="btn btn-primary btn-pimp">Challenge a friend</button></li>
-            <li><button class="btn btn-primary btn-pimp">Share on Facebook</button></li>
-          </ul>
+      <% if @games.empty? %>
+      <div class="let-play">
+        <div class="row">
+          <H2>Alors comme ça on se créé un compte et on veut pas faire sa première partie ?</H2>
         </div>
+      </div>
+      <div class="let-play">
+          <button class="btn btn-primary btn-pimp" id="btn-play-once"><%= link_to 'Play NOW', root_path %></button><p>
+        </div>
+      </div>
+      <% else %>
+      <div class="row scores-array">
+        <% @games.each do |game| %>
+          <div class="scores">
+
+            <img class="scores-image" src="<%= cl_image_path game.theme.photo %>">
+
+            <div class="scores-body text-center">
+              <p><%= game.theme.city.name %></p>
+              <p><%= game.theme.name %></p>
+              <p><strong><%= game.score_one %></strong></p>
+            </div>
+
+            <ul class="list-inline scores-controls">
+              <li><button class="btn btn-primary btn-pimp"><%= link_to 'Play again', theme_games_path(game.theme_id), method: :post %></button></li>
+              <li><button class="btn btn-primary btn-pimp">Challenge a friend</button></li>
+              <li><button class="btn btn-primary btn-pimp">Share on Facebook</button></li>
+            </ul>
+          </div>
+        <% end %>
       <% end %>
     </div>
 
