--- a/app/views/games/create.js.erb
+++ b/app/views/games/create.js.erb
@@ -12,3 +12,24 @@
     // ajouter  le lien du game dans le formulaire
      const linkToChallenge = document.getElementById('LinkChallenge')
      linkToChallenge.value = "<%= new_game_challenge_url(@game) %>"
+
+
+const fbButton = document.getElementById('fb');
+const linkChallenge  = "<%= new_game_challenge_url(@game) %>"
+const fbAppid = "570488603404594";
+const urlGameBegin = "<%= theme_games_url(@game.theme.id)%>";
+const pageName = "<%= current_user.username %> is challenging you on <%= @game.theme.name %>";
+const pageCaption = "Et en plus il parait qu'il va te niquer tes morts";
+const pageDescription = "le sang de ses mort ce jeux est trop bien";
+const finalUrlFb = `https://www.facebook.com/dialog/feed?app_id=${fbAppid}&link=${linkChallenge}&name=${pageName}&caption=${pageCaption}&description=${pageDescription}&redirect_uri=${urlGameBegin}`;
+fbButton.href = link.str(finalUrlFb);
+// &picture={picture}
+// Paramètres :
+
+// app_id : numéro unique d’application Facebook
+// link : URL de la page en cours
+// picture : URL d’une image
+// name : nom de la page
+// caption : sous-titre de la page
+// description : description de la page
+// redirect_uri : URL pour revenir vers votre page, celle de la page en cours par exemple
